Fixes height issues on ios safari

--- a/src/css/LifeBoard.sass
+++ b/src/css/LifeBoard.sass
@@ -5,8 +5,10 @@
     justify-content: center
     align-items: center
     align-content: flex-start
-    height: calc(100vh - 100px)
+    // height: calc(100vh - 100px)
+    // flex: 1
 
     @media (max-width: 800px)
-        height: calc(100vh - 130px)
+        // height: calc(100vh - 130px)
+        // flex: 1
 
