--- a/src/index.sass
+++ b/src/index.sass
@@ -18,6 +18,7 @@ html
 
 body
     margin: 0
+    // height: -webkit-fill-available
 
 small, .text_small
     font-size: 0.833rem
@@ -32,6 +33,12 @@ p, span, button
 .mobile-section
     padding: 1rem
     text-align: center
+
+footer
+    position: fixed
+    bottom: 0
+    left: 0
+    width: 100%
 
 @import 'css/Header'
 @import 'css/Controls'
